--- a/aon-blog/src/app/components/Header/header.module.css
+++ b/aon-blog/src/app/components/Header/header.module.css
@@ -1,12 +1,17 @@
 .border {
   border-bottom: 1px solid #000000;
   align-items: center;
+  background-color: #fff;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 80px;
+  background-color: #fff;
 }
 .logo {
   font-size: 0.8rem;
