--- a/aon-blog/src/app/components/card/card.module.css
+++ b/aon-blog/src/app/components/card/card.module.css
@@ -1,3 +1,17 @@
-.card{
-    position: absolute;
+.card .img{
+    height: 200px;
+    background-color: black;
+    position: relative;
+}
+.card .img img{
+    object-fit: cover;
+}
+.card .footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card .footer a{
+    text-decoration: none;
+    color: #000;
 }
