--- a/aon-blog/src/app/components/card/card.module.css
+++ b/aon-blog/src/app/components/card/card.module.css
@@ -1,17 +1,28 @@
 .card .img{
     height: 200px;
-    background-color: black;
     position: relative;
+    
 }
 .card .img img{
     object-fit: cover;
+}
+.card .title h1{
+     font-size:26px;
+}
+.card .subTitle p{
+    font-size: 20px;
+    color: #666666;
 }
 .card .footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
 }
 .card .footer a{
     text-decoration: none;
-    color: #000;
+    color: #0000FF;
+}
+.card .footer p{
+    color: #666666;
 }
