--- a/aon-blog/src/app/components/card/card.module.css
+++ b/aon-blog/src/app/components/card/card.module.css
@@ -1,10 +1,13 @@
+.card{
+    animation: faideIn 0.5s;
+}
 .card .img{
     height: 200px;
     position: relative;
-    
 }
 .card .img img{
     object-fit: cover;
+    
 }
 .card .title h1{
      font-size:26px;
@@ -25,4 +28,13 @@
 }
 .card .footer p{
     color: #666666;
+}
+@keyframes faideIn{
+    0%{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    100%{
+        opacity: 1;
+    }
 }
