--- a/aon-blog/src/app/components/footer/footer.module.css
+++ b/aon-blog/src/app/components/footer/footer.module.css
@@ -19,9 +19,10 @@
 }
 .footer .content .contact ul li{
     margin-left: 20px;
+    margin-top: 10px;
 }
 .footer .content .contact ul li a{
     text-decoration: none;
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: #000;
 }
