--- a/aon-blog/src/app/page.module.css
+++ b/aon-blog/src/app/page.module.css
@@ -1,9 +1,20 @@
-.home .cover{
-  height: 400px;
-  background-color: #f6f6f6;
+.main{
   position: relative;
 }
-.home .cover .overlay{
+.over{
+  position: absolute;
+  margin-top: 500px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 100;
+}
+.main .cover{
+  height: 400px;
+  background-color: transparent;
+  position: relative;
+}
+.main .cover .overlay{
   position: absolute;
   top: 0;
   left: 0;
@@ -11,21 +22,64 @@
   bottom: 0;
   background-color: #0000001c;
 }
-.home .cover .overlay .title{
+.main .cover .overlay .title{
   color: black;
   margin-top: 150px;
 }
-.home .cover .overlay .title h1{
+.main .cover .overlay .title h1{
   font-size: 3rem;
 }
-.home .cover .overlay .title p{
+.main .cover .overlay .title p{
   font-size: 2.5rem;
 }
-.home .cardContainer{
+.main .cardContainer{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 40px 28px;
   margin-top: -80px;
   margin-bottom: 220px;
-  position: relative;
 }
+.loader{
+  width: 200px;
+  height: 40px;
+  background-color: #0004;
+  position: relative;
+  border-radius: 50px;
+  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.05);
+  margin-top: 300px;
+  margin-left: 500px;
+}
+.loader:after {
+  border-radius: 50px;
+  content: "";
+  position: absolute;
+  background-color: #fff;
+  left: 2px;
+  top: 2px;
+  bottom: 2px;
+  right: 360px;
+  animation: slide 2s linear infinite;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes slide {
+  0% {
+    right: 150px;
+    left: 2px;
+  }
+  5% {
+    left: 2px;
+  }
+  50% {
+    right: 2px;
+    left: 150px;
+  }
+  55% {
+    right: 2px;
+  }
+  100% {
+    right: 150px;
+    left: 2px;
+  }
+}
+  
