--- a/aon-blog/src/app/components/card/card.module.css
+++ b/aon-blog/src/app/components/card/card.module.css
@@ -7,7 +7,26 @@
 }
 .card .img img{
     object-fit: cover;
-    
+}
+.card .subTitle{
+    display: flex;
+    justify-content:start;
+    align-items: center;
+}
+.card .footer .read {
+    display: flex;
+}
+.card .footer .read button{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    overflow: visible;
+    margin-left: 15px;
+    font-size: 20px;
+    transition: transform 0.3s ease-in-out;
+}
+.card .footer .read button:hover{
+    transform: scale(2);
 }
 .card .title h1{
      font-size:26px;
