--- a/aon-blog/src/app/components/Header/header.module.css
+++ b/aon-blog/src/app/components/Header/header.module.css
@@ -26,4 +26,18 @@
   text-decoration: none;
   color: #000;
   font-size: 1.2rem;
+  position: relative;
+}
+.content .count {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: red;
+  color: #fff;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: -13px;
+  left: -15px;
 }
