--- a/aon-blog/src/app/components/Header/header.module.css
+++ b/aon-blog/src/app/components/Header/header.module.css
@@ -41,3 +41,13 @@
   top: -13px;
   left: -15px;
 }
+@media screen and (max-width: 400px) {
+  .logo {
+    font-size: 0.6rem;
+  }
+  .content ul li a {
+    font-size: 1rem;
+  }
+}
+
+
