--- a/aon-blog/src/app/components/footer/footer.module.css
+++ b/aon-blog/src/app/components/footer/footer.module.css
@@ -26,3 +26,28 @@
     font-size: 2.5rem;
     color: #000;
 }
+@media screen and (max-width: 580px) {
+    .footer .content p{
+        font-size: 1rem;
+    }
+    .footer .content .contact ul li a{
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 400px) {
+    .footer .content{
+        display: block;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+        
+    }
+    .footer .content p{
+        font-size: 1.1rem;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+    .footer .content .contact ul{
+        margin-bottom: 5px;
+    }
+}
