--- a/aon-blog/src/app/favorite/page.module.css
+++ b/aon-blog/src/app/favorite/page.module.css
@@ -1,92 +1,141 @@
 .home .cover{
-    height: 400px;
-    background-color: #f6f6f6;
-    position: relative;
+  height: 400px;
+  background-color: #f6f6f6;
+  position: relative;
+}
+.home .over{
+  margin-top: -80px;
+}
+.home .cover .overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #0000001c;
+}
+.home .cover .overlay .title{
+  color: black;
+  margin-top: 150px;
+}
+.home .cover .overlay .title h1{
+  font-size: 3rem;
+}
+.home .cover .overlay .title p{
+  font-size: 2.5rem;
+}
+.home .cardContainer{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px 28px;
+  margin-bottom: 320px;
+}
+.loader {
+  font-size: 48px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #3a0000;
+  letter-spacing: 2px;
+  position: relative;
+  margin-bottom: 300px;
+  top: 150px;
+  left: 500px;
+}
+.loader::after {
+  content: 'Empty';
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #140000;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+  animation: animloader 2s ease-in infinite;
+}
+
+@keyframes animloader {
+  0% {
+    width: 0%;
   }
-  .home .over{
-    margin-top: -80px;
+  100% {
+    width: 100%;
   }
-  .home .cover .overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #0000001c;
+}
+
+@media screen and (max-width: 1100px) {
+  .loader {
+    left: 450px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .loader {
+    left: 400px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .home .cardContainer{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .loader {
+    left: 350px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .loader {
+    left: 300px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .loader {
+    left: 230px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .loader {
+    left: 180px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .loader {
+    left: 120px;
+  }
+}
+@media screen and (max-width: 440px) {
+  .home .cardContainer{
+    grid-template-columns: repeat(1, 1fr);
+    margin: auto;
   }
   .home .cover .overlay .title{
     color: black;
-    margin-top: 150px;
+    margin-top: 100px;
   }
-  .home .cover .overlay .title h1{
-    font-size: 3rem;
+  .home .over{
+    margin-top: -50px;
   }
-  .home .cover .overlay .title p{
-    font-size: 2.5rem;
+  .loader {
+    left: 90px;
   }
-  .home .cardContainer{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px 28px;
-    margin-bottom: 220px;
+}
+@media screen and (max-width: 300px) {
+  .home .cover .overlay .title{
+    color: black;
+    margin-top: 100px;
   }
-  .home .cardContainer span{
-    margin-top: 300px;
-    margin-left: 300px;
-    font-size: 10rem;
+  .home .over{
+    margin-top: -50px;
   }
-  .loader{
-    width: 200px;
-    height: 40px;
-    background-color: #0004;
-    position: relative;
-    border-radius: 50px;
-    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.05);
-    margin-top: 300px;
-    margin-left: 500px;
+}
+  .loader {
+    left: 35px;
   }
-  .loader:after {
-    border-radius: 50px;
-    content: "";
-    position: absolute;
-    background-color: #fff;
-    left: 2px;
-    top: 2px;
-    bottom: 2px;
-    right: 360px;
-    animation: slide 2s linear infinite;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+@media screen and (max-width: 280px) {
+  .home .cover .overlay .title{
+    color: black;
+    margin-top: 100px;
   }
-  
-  @keyframes slide {
-    0% {
-      right: 150px;
-      left: 2px;
-    }
-    5% {
-      left: 2px;
-    }
-    50% {
-      right: 2px;
-      left: 150px;
-    }
-    55% {
-      right: 2px;
-    }
-    100% {
-      right: 150px;
-      left: 2px;
-    }
+  .home .over{
+    margin-top: -50px;
   }
-  @media screen and (max-width: 900px) {
-    .home .cardContainer{
-      grid-template-columns: repeat(2, 1fr);
-      margin: auto;
-    }
-  }
-  @media screen and (max-width: 440px) {
-    .home .cardContainer{
-      grid-template-columns: repeat(1, 1fr);
-      margin: auto;
-    }
-  }
+}
