--- a/aon-blog/src/app/page.module.css
+++ b/aon-blog/src/app/page.module.css
@@ -28,61 +28,114 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 40px 28px;
-  margin-bottom: 220px;
+  margin-bottom: 320px;
 }
-.loader{
-  width: 200px;
-  height: 40px;
-  background-color: #0004;
+.loader {
+  font-size: 48px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #5d5d5d;
+  letter-spacing: 2px;
   position: relative;
-  border-radius: 50px;
-  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.05);
-  margin-top: 300px;
-  margin-left: 500px;
+  margin-bottom: 300px;
+  top: 150px;
+  left: 500px;
 }
-.loader:after {
-  border-radius: 50px;
-  content: "";
+.loader::after {
+  content: 'Loading';
   position: absolute;
-  background-color: #fff;
-  left: 2px;
-  top: 2px;
-  bottom: 2px;
-  right: 360px;
-  animation: slide 2s linear infinite;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  left: 0;
+  top: 0;
+  color: #000000;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+  animation: animloader 2s ease-in infinite;
 }
 
-@keyframes slide {
+@keyframes animloader {
   0% {
-    right: 150px;
-    left: 2px;
-  }
-  5% {
-    left: 2px;
-  }
-  50% {
-    right: 2px;
-    left: 150px;
-  }
-  55% {
-    right: 2px;
+    width: 0%;
   }
   100% {
-    right: 150px;
-    left: 2px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .loader {
+    left: 450px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .loader {
+    left: 400px;
   }
 }
 @media screen and (max-width: 900px) {
   .home .cardContainer{
     grid-template-columns: repeat(2, 1fr);
-
-    margin: auto;
+  }
+  .loader {
+    left: 350px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .loader {
+    left: 300px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .loader {
+    left: 230px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .loader {
+    left: 180px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .loader {
+    left: 120px;
   }
 }
 @media screen and (max-width: 440px) {
   .home .cardContainer{
     grid-template-columns: repeat(1, 1fr);
     margin: auto;
+  }
+  .home .cover .overlay .title{
+    color: black;
+    margin-top: 100px;
+  }
+  .home .over{
+    margin-top: -50px;
+  }
+  .loader {
+    left: 90px;
+  }
+}
+@media screen and (max-width: 300px) {
+  .home .cover .overlay .title{
+    color: black;
+    margin-top: 100px;
+  }
+  .home .over{
+    margin-top: -50px;
+  }
+}
+  .loader {
+    left: 35px;
+  }
+@media screen and (max-width: 280px) {
+  .home .cover .overlay .title{
+    color: black;
+    margin-top: 100px;
+  }
+  .home .over{
+    margin-top: -50px;
   }
 }
