still metadata img

--- a/aon-blog/src/app/components/footer/footer.module.css
+++ b/aon-blog/src/app/components/footer/footer.module.css
@@ -40,7 +40,7 @@
         align-items: center;
         justify-content: center;
         margin: auto;
-        
+        height: 100px;
     }
     .footer .content p{
         font-size: 1.1rem;
