--- a/src/app/article/[id]/page.module.css
+++ b/src/app/article/[id]/page.module.css
@@ -1,64 +1,170 @@
-.top{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    margin-top: 40px;
-    margin-bottom: 10px;
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  margin-top: 40px;
+  margin-bottom: 10px;
 }
-.top .title h1{
-    font-size: 2rem;
+.top .title h1 {
+  font-size: 2rem;
 }
-.top .title p{
-    font-size: 1.2rem;
-    color: #666666;
+.top .title p {
+  font-size: 1.2rem;
+  color: #666666;
 }
-.top .date p{
-    font-size: 1.2rem;
-    color: #666666;
+.top .date p {
+  font-size: 1.2rem;
+  color: #666666;
 }
-.img{
-    width: 100%;
-    position: relative;
+.img {
+  width: 100%;
+  position: relative;
 }
-.img img{
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
+.img img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
-.content{
-    margin-top: 40px;
-    margin-bottom: 40px;
-    color: #666666;
+.content {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  color: #666666;
 }
-.fcontent{
-    margin-top: 40px;
-    margin-bottom: 100px;
+.fcontent {
+  margin-top: 40px;
+  margin-bottom: 100px;
 }
-.hr{
-    margin-top: 20px;
-    margin-bottom: 20px;
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 900px;
+  padding-left: 600px;
 }
-.hr hr{
-    margin-top: 20px;
-    border: none;
-    border-top: 10px dotted #00000042;
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 3px solid #000000;
+  border-right: 3px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .loading {
+    padding-left: 500px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .loading {
+    padding-left: 450px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .home .cardContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .loading {
+    padding-left: 400px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .loading {
+    padding-left: 350px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .loading {
+    padding-left: 300px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .loading {
+    padding-left: 250px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .loading {
+    padding-left: 200px;
+  }
+}
+@media screen and (max-width: 440px) {
+  .home .cardContainer {
+    grid-template-columns: repeat(1, 1fr);
     margin: auto;
-    max-width: 100px;
+  }
+  .home .cover .overlay .title {
+    color: black;
+    margin-top: 100px;
+  }
+  .home .over {
+    margin-top: -50px;
+  }
+  .loading {
+    padding-left: 150px;
+  }
+}
+@media screen and (max-width: 300px) {
+  .home .cover .overlay .title {
+    color: black;
+    margin-top: 100px;
+  }
+  .home .over {
+    margin-top: -50px;
+  }
+}
+.loading {
+  padding-left: 10px;
+}
+@media screen and (max-width: 280px) {
+  .home .cover .overlay .title {
+    color: black;
+    margin-top: 100px;
+  }
+  .home .over {
+    margin-top: -50px;
+  }
+  .loading {
+    padding-left: 0px;
+  }
+}
+
+.hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.hr hr {
+  margin-top: 20px;
+  border: none;
+  border-top: 10px dotted #00000042;
+  margin: auto;
+  max-width: 100px;
 }
 @media screen and (max-width: 580px) {
-    .top .title h1{
-        font-size: 1.5rem;
-    }
-    .top .title p{
-        font-size: 1rem;
-    }
-    .top .date p{
-        font-size: 1rem;
-    }
+  .top .title h1 {
+    font-size: 1.5rem;
+  }
+  .top .title p {
+    font-size: 1rem;
+  }
+  .top .date p {
+    font-size: 1rem;
+  }
 }
 @media screen and (max-width: 450px) {
-    .top{
-        display: flex;
-        flex-direction: column;
-    }
+  .top {
+    display: flex;
+    flex-direction: column;
+  }
 }
