--- a/src/app/components/footer/footer.module.css
+++ b/src/app/components/footer/footer.module.css
@@ -1,53 +1,62 @@
-.footer{
-    background-color: #EEEEEE;
-    border-top: 1px solid #000000;
+.footer {
+  background-color: #eeeeee;
+  border-top: 1px solid #000000;
 }
-.footer .content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    background-color: #EEEEEE;
+.footer .content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  background-color: #eeeeee;
 }
-.footer .content p{
-    font-size: 1.2rem;
+.footer .content p {
+  font-size: 1.2rem;
 }
-.footer .content .contact ul{
-    display: flex;
-    align-items: center;
-    list-style: none;
+.footer .content .contact ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
 }
-.footer .content .contact ul li{
-    margin-left: 20px;
-    margin-top: 10px;
+.footer .content .contact ul li {
+  margin-left: 20px;
+  margin-top: 10px;
 }
-.footer .content .contact ul li a{
-    text-decoration: none;
-    font-size: 2.5rem;
-    color: #000;
+.footer .content .contact ul li a {
+  text-decoration: none;
+  font-size: 2.5rem;
+  color: #000;
 }
 @media screen and (max-width: 580px) {
-    .footer .content p{
-        font-size: 1rem;
-    }
-    .footer .content .contact ul li a{
-        font-size: 2rem;
-    }
+  .footer .content p {
+    font-size: 1rem;
+  }
+  .footer .content .contact ul li a {
+    font-size: 2rem;
+  }
+  .footer .content .contact ul li {
+    margin-left: 0px;
+    margin-top: 10px;
+  }
 }
 @media screen and (max-width: 400px) {
-    .footer .content{
-        display: block;
-        align-items: center;
-        justify-content: center;
-        margin: auto;
-        height: 100px;
-    }
-    .footer .content p{
-        font-size: 1.1rem;
-        margin-top: 10px;
-        margin-bottom: 5px;
-    }
-    .footer .content .contact ul{
-        margin-bottom: 5px;
-    }
+  .footer .content {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    height: 100px;
+  }
+  .footer .content p {
+    font-size: 1.1rem;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+  .footer .content .contact ul {
+    margin-bottom: 5px;
+    gap: 10px;
+  }
+  .footer .content .contact ul li {
+    margin-left: 0px;
+    margin-top: 10px;
+  }
 }
