--- a/src/app/favorite/page.module.css
+++ b/src/app/favorite/page.module.css
@@ -1,12 +1,12 @@
-.home .cover{
+.home .cover {
   height: 400px;
   background-color: #f6f6f6;
   position: relative;
 }
-.home .over{
+.home .over {
   margin-top: -80px;
 }
-.home .cover .overlay{
+.home .cover .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -14,128 +14,124 @@
   bottom: 0;
   background-color: #0000001c;
 }
-.home .cover .overlay .title{
+.home .cover .overlay .title {
   color: black;
   margin-top: 150px;
 }
-.home .cover .overlay .title h1{
+.home .cover .overlay .title h1 {
   font-size: 3rem;
 }
-.home .cover .overlay .title p{
+.home .cover .overlay .title p {
   font-size: 2.5rem;
 }
-.home .cardContainer{
+.home .cardContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 40px 28px;
   margin-bottom: 320px;
 }
-.loader {
-  font-size: 48px;
-  display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  color: #3a0000;
-  letter-spacing: 2px;
-  position: relative;
-  margin-bottom: 300px;
-  top: 150px;
-  left: 500px;
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 900px;
+  padding-left: 600px;
 }
-.loader::after {
-  content: 'Empty';
-  position: absolute;
-  left: 0;
-  top: 0;
-  color: #140000;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 3px solid #000000;
+  border-right: 3px solid transparent;
   box-sizing: border-box;
-  animation: animloader 2s ease-in infinite;
+  animation: rotation 1s linear infinite;
 }
 
-@keyframes animloader {
+@keyframes rotation {
   0% {
-    width: 0%;
+    transform: rotate(0deg);
   }
   100% {
-    width: 100%;
+    transform: rotate(360deg);
   }
 }
 
 @media screen and (max-width: 1100px) {
-  .loader {
-    left: 450px;
+  .loading {
+    padding-left: 500px;
   }
 }
 @media screen and (max-width: 1000px) {
-  .loader {
-    left: 400px;
+  .loading {
+    padding-left: 450px;
   }
 }
 @media screen and (max-width: 900px) {
-  .home .cardContainer{
+  .home .cardContainer {
     grid-template-columns: repeat(2, 1fr);
   }
-  .loader {
-    left: 350px;
+  .loading {
+    padding-left: 400px;
   }
 }
 @media screen and (max-width: 800px) {
-  .loader {
-    left: 300px;
+  .loading {
+    padding-left: 350px;
   }
 }
 @media screen and (max-width: 700px) {
-  .loader {
-    left: 230px;
+  .loading {
+    padding-left: 300px;
   }
 }
 @media screen and (max-width: 600px) {
-  .loader {
-    left: 180px;
+  .loading {
+    padding-left: 250px;
   }
 }
 @media screen and (max-width: 500px) {
-  .loader {
-    left: 120px;
+  .loading {
+    padding-left: 200px;
   }
 }
 @media screen and (max-width: 440px) {
-  .home .cardContainer{
+  .home .cardContainer {
     grid-template-columns: repeat(1, 1fr);
     margin: auto;
   }
-  .home .cover .overlay .title{
+  .home .cover .overlay .title {
     color: black;
     margin-top: 100px;
   }
-  .home .over{
+  .home .over {
     margin-top: -50px;
   }
-  .loader {
-    left: 90px;
+  .loading {
+    padding-left: 150px;
   }
 }
 @media screen and (max-width: 300px) {
-  .home .cover .overlay .title{
+  .home .cover .overlay .title {
     color: black;
     margin-top: 100px;
   }
-  .home .over{
+  .home .over {
     margin-top: -50px;
   }
 }
-  .loader {
-    left: 35px;
-  }
+.loading {
+  padding-left: 10px;
+}
 @media screen and (max-width: 280px) {
-  .home .cover .overlay .title{
+  .home .cover .overlay .title {
     color: black;
     margin-top: 100px;
   }
-  .home .over{
+  .home .over {
     margin-top: -50px;
+  }
+  .loading {
+    padding-left: 0px;
   }
 }
